# notion-workflow-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py
.claude/commands/: capture.md  daily.md  detail.md  note.md  overview.md  progress.md  recall.md  review.md  standup.md  status.md  subtask.md  task_list.md  weekly.md
.claude/skills/capture/: SKILL.md
.claude/skills/decompose-task/: SKILL.md
.claude/skills/detail/: SKILL.md
.claude/skills/find/: SKILL.md
.claude/skills/note/: SKILL.md
.claude/skills/progress/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/standup/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/subtask-add/: SKILL.md
.claude/skills/task-list/: SKILL.md
commands/: capture.md  done.md  find.md  note.md  overview.md  review.md  start.md  today.md
docs/superpowers/specs/: 2026-03-21-workflow-redesign-design.md
notion/: __init__.py  client.py  models.py
scripts/: init_databases.py  install-skills.sh
tools/: aggregations.py  notes.py  relations.py  workflow.py
