[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-workflow-mcp"
version = "0.1.0"
description = "Personal workflow management via Claude CLI + Notion API (MCP Server)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "notion-client>=2.2.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
notion-workflow-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
